--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         padding: 20px;
         max-width: 1000px;
         margin: 20px auto;
-        background: #fff;
+        background: rgba(255, 255, 255, 0.8);
         border-radius: 8px;
         box-sizing: border-box;
+        backdrop-filter: blur(5px);
     }
 
     h2 {
