--- a/index.html
+++ b/index.html
@@ -4,136 +4,136 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>山下勇磨 ポートフォリオ</title>
+
+<!-- ✅ AOS（Animate On Scroll） -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
 <style>
-  /* --- ページ全体を透過させる --- */
-  html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      background: transparent !important;   /* ← 完全透過 */
-      background-color: transparent !important; /* ← どんな上書きも無視 */
-  }
+    body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        margin: 0;
+        padding: 0;
+        background-color: transparent;
+    }
 
-  header {
-      background: linear-gradient(90deg, #007acc, #005fa3);
-      color: #fff;
-      padding: 30px 0;
-      text-align: center;
-      border-radius: 0 0 10px 10px;
-  }
+    header {
+        background: linear-gradient(90deg, #007acc, #005fa3);
+        color: #fff;
+        padding: 30px 0;
+        text-align: center;
+    }
 
-  header h1 {
-      margin: 0;
-      font-size: 28px;
-  }
+    header h1 {
+        margin: 0;
+        font-size: 28px;
+    }
 
-  header p {
-      margin: 5px 0 0;
-      font-size: 16px;
-  }
+    header p {
+        margin: 5px 0 0;
+        font-size: 16px;
+    }
 
-  section {
-      padding: 20px;
-      max-width: 1000px;
-      margin: 20px auto;
-      background: rgba(255, 255, 255, 0.8); /* 半透明カード */
-      border-radius: 8px;
-      box-sizing: border-box;
-      backdrop-filter: blur(5px);
-  }
+    section {
+        padding: 20px;
+        max-width: 1000px;
+        margin: 20px auto;
+        background: rgba(255, 255, 255, 0.8);
+        border-radius: 8px;
+        box-sizing: border-box;
+        backdrop-filter: blur(5px);
+    }
 
-  h2 {
-      color: #007acc;
-      border-left: 6px solid #007acc;
-      padding-left: 10px;
-      margin-bottom: 15px;
-  }
+    h2 {
+        color: #007acc;
+        border-left: 6px solid #007acc;
+        padding-left: 10px;
+        margin-bottom: 15px;
+    }
 
-  /* --- スキルテーブル --- */
-  .table-wrapper {
-      overflow-x: auto;
-      margin: 0 auto;
-      border: 2px solid #007acc;
-      border-radius: 8px;
-      padding: 10px;
-      background: rgba(255, 255, 255, 0.9); /* 少し透過 */
-  }
+    /* --- スキルテーブル --- */
+    .table-wrapper {
+        overflow-x: auto;
+        margin: 0 auto;
+        border: 2px solid #007acc;
+        border-radius: 8px;
+        padding: 10px;
+        background-color: #fff;
+    }
 
-  .table-wrapper table {
-      width: 100%;
-      border-collapse: collapse;
-  }
+    .table-wrapper table {
+        width: 100%;
+        border-collapse: collapse;
+    }
 
-  .table-wrapper th, .table-wrapper td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: left;
-  }
+    .table-wrapper th, .table-wrapper td {
+        border: 1px solid #ccc;
+        padding: 10px;
+        text-align: left;
+    }
 
-  .table-wrapper th {
-      background-color: #007acc;
-      color: #fff;
-  }
+    .table-wrapper th {
+        background-color: #007acc;
+        color: #fff;
+    }
 
-  .table-wrapper tr:nth-child(even) {
-      background-color: rgba(249, 249, 249, 0.9);
-  }
+    .table-wrapper tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
 
-  /* --- プロジェクトカード --- */
-  .project-card {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 20px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      background: rgba(255,255,255,0.9); /* ← 背景透ける */
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-  }
+    /* --- プロジェクトカード --- */
+    .project-card {
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        background: #fff;
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
 
-  .project-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-  }
+    .project-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
 
-  .project-card h3 {
-      color: #007acc;
-      margin-top: 0;
-  }
+    .project-card h3 {
+        color: #007acc;
+        margin-top: 0;
+    }
 
-  .project-card p {
-      margin: 5px 0;
-  }
+    .project-card p {
+        margin: 5px 0;
+    }
 
-  a.button {
-      display: inline-block;
-      padding: 10px 15px;
-      background: #007acc;
-      color: #fff;
-      border-radius: 5px;
-      text-decoration: none;
-      margin-top: 10px;
-  }
+    a.button {
+        display: inline-block;
+        padding: 10px 15px;
+        background: #007acc;
+        color: #fff;
+        border-radius: 5px;
+        text-decoration: none;
+        margin-top: 10px;
+    }
 
-  a.button:hover {
-      background: #005fa3;
-  }
+    a.button:hover {
+        background: #005fa3;
+    }
 
-  footer {
-      text-align: center;
-      padding: 20px;
-      background: rgba(51, 51, 51, 0.8); /* ← 半透明 */
-      color: #fff;
-  }
+    footer {
+        text-align: center;
+        padding: 20px;
+        background: #333;
+        color: #fff;
+    }
 
-  @media (max-width: 600px) {
-      header h1 { font-size: 20px; }
-      h2 { font-size: 16px; }
-      .table-wrapper th, .table-wrapper td { padding: 8px; font-size: 11px; }
-  }
+    /* --- レスポンシブ対応 --- */
+    @media (max-width: 600px) {
+        header h1 { font-size: 20px; }
+        h2 { font-size: 16px; }
+        .table-wrapper th, .table-wrapper td { padding: 8px; font-size: 11px; }
+    }
 </style>
-
 </head>
 
 <body>
@@ -143,7 +143,7 @@
     <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
-<section id="skills">
+<section id="skills" data-aos="fade-up">
     <h2>スキル一覧</h2>
     <div class="table-wrapper">
         <table>
@@ -184,7 +184,8 @@
 <section id="projects">
     <h2>個人プロジェクト事例</h2>
 
-    <div class="project-card">
+    <!-- 左からスライド＋順番にディレイ -->
+    <div class="project-card" data-aos="fade-right" data-aos-delay="0">
         <h3>A. Web開発</h3>
         <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
         <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
@@ -193,7 +194,7 @@
         <a class="button" href="https://www.aplamodel-fishing.com/" target="_blank">Webサイトを見る</a>
     </div>
 
-    <div class="project-card">
+    <div class="project-card" data-aos="fade-right" data-aos-delay="200">
         <h3>B. 制御・組み込み系</h3>
         <p><strong>概要：</strong>PLCシーケンス制御設計、動力盤・計装盤設計</p>
         <p><strong>使用技術：</strong>シーケンス図面作成、回路設計、PLC接続設計</p>
@@ -201,7 +202,7 @@
     </div>
 </section>
 
-<section id="education">
+<section id="education" data-aos="fade-up">
     <h2>学習・資格</h2>
     <ul>
         <li>学習：Java, HTML/CSS, JavaScript, SQL, MVC</li>
@@ -215,7 +216,7 @@
     </ul>
 </section>
 
-<section id="contact">
+<section id="contact" data-aos="fade-up">
     <h2>連絡先</h2>
     <p>Email: aplamodel@outlook.com</p>
 </section>
@@ -224,35 +225,13 @@
     <p>© 2025 山下勇磨</p>
 </footer>
 
+<!-- ✅ AOSスクリプト -->
+<script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
-// === スクロール時のフェードイン ===
-document.addEventListener("scroll", () => {
-  document.querySelectorAll(".fade-in").forEach(el => {
-    const rect = el.getBoundingClientRect();
-    if (rect.top < window.innerHeight - 100) {
-      el.classList.add("visible");
-    }
-  });
-});
-
-// === スムーズスクロール ===
-document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-  anchor.addEventListener("click", function(e) {
-    e.preventDefault();
-    const target = document.querySelector(this.getAttribute("href"));
-    if (target) {
-      target.scrollIntoView({ behavior: "smooth" });
-    }
-  });
-});
-
-// === トップへ戻るボタン ===
-const toTop = document.getElementById("toTop");
-window.addEventListener("scroll", () => {
-  toTop.style.display = window.scrollY > 300 ? "block" : "none";
-});
-toTop.addEventListener("click", () => {
-  window.scrollTo({ top: 0, behavior: "smooth" });
+AOS.init({
+  duration: 1000, // アニメーション時間（ms）
+  once: true,     // 一度だけ実行
+  easing: 'ease-out-cubic'
 });
 </script>
 
