--- a/index.html
+++ b/index.html
@@ -1,239 +1,105 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>山下勇磨 ポートフォリオ</title>
 
-<!-- ✅ AOS（Animate On Scroll） -->
+<!-- AOS CSS（headで読み込む） -->
 <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: transparent;
-    }
+  html,body{
+    height:100%;
+    margin:0;
+    padding:0;
+    background:transparent;
+    font-family: Arial, sans-serif;
+    line-height:1.6;
+  }
+  header{ background: linear-gradient(90deg,#007acc,#005fa3); color:#fff; padding:30px 0; text-align:center; }
+  header h1{ margin:0; font-size:28px }
+  header p{ margin:5px 0 0; font-size:16px }
 
-    header {
-        background: linear-gradient(90deg, #007acc, #005fa3);
-        color: #fff;
-        padding: 30px 0;
-        text-align: center;
-    }
+  section{ padding:20px; max-width:1000px; margin:20px auto; background: rgba(255,255,255,0.8); border-radius:8px; box-sizing:border-box; backdrop-filter: blur(5px); }
 
-    header h1 {
-        margin: 0;
-        font-size: 28px;
-    }
+  h2{ color:#007acc; border-left:6px solid #007acc; padding-left:10px; margin-bottom:15px; }
 
-    header p {
-        margin: 5px 0 0;
-        font-size: 16px;
-    }
+  .table-wrapper{ overflow-x:auto; margin:0 auto; border:2px solid #007acc; border-radius:8px; padding:10px; background: rgba(255,255,255,0.95); }
+  .table-wrapper table{ width:100%; border-collapse:collapse; }
+  .table-wrapper th, .table-wrapper td{ border:1px solid #ccc; padding:10px; text-align:left; }
+  .table-wrapper th{ background-color:#007acc; color:#fff; }
+  .table-wrapper tr:nth-child(even){ background-color: rgba(249,249,249,0.95); }
 
-    section {
-        padding: 20px;
-        max-width: 1000px;
-        margin: 20px auto;
-        background: rgba(255, 255, 255, 0.8);
-        border-radius: 8px;
-        box-sizing: border-box;
-        backdrop-filter: blur(5px);
-    }
+  .project-card{ border:1px solid #ddd; border-radius:10px; padding:20px; margin-bottom:20px; box-shadow:0 2px 5px rgba(0,0,0,0.1); background: rgba(255,255,255,0.95); transition: transform .2s ease, box-shadow .2s ease; }
+  .project-card:hover{ transform: translateY(-5px); box-shadow:0 4px 12px rgba(0,0,0,0.15); }
+  .project-card h3{ color:#007acc; margin-top:0; }
+  .project-card p{ margin:5px 0; }
 
-    h2 {
-        color: #007acc;
-        border-left: 6px solid #007acc;
-        padding-left: 10px;
-        margin-bottom: 15px;
-    }
+  a.button{ display:inline-block; padding:10px 15px; background:#007acc; color:#fff; border-radius:5px; text-decoration:none; margin-top:10px; }
+  a.button:hover{ background:#005fa3; }
 
-    /* --- スキルテーブル --- */
-    .table-wrapper {
-        overflow-x: auto;
-        margin: 0 auto;
-        border: 2px solid #007acc;
-        border-radius: 8px;
-        padding: 10px;
-        background-color: #fff;
-    }
-
-    .table-wrapper table {
-        width: 100%;
-        border-collapse: collapse;
-    }
-
-    .table-wrapper th, .table-wrapper td {
-        border: 1px solid #ccc;
-        padding: 10px;
-        text-align: left;
-    }
-
-    .table-wrapper th {
-        background-color: #007acc;
-        color: #fff;
-    }
-
-    .table-wrapper tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-
-    /* --- プロジェクトカード --- */
-    .project-card {
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        padding: 20px;
-        margin-bottom: 20px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        background: #fff;
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .project-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-
-    .project-card h3 {
-        color: #007acc;
-        margin-top: 0;
-    }
-
-    .project-card p {
-        margin: 5px 0;
-    }
-
-    a.button {
-        display: inline-block;
-        padding: 10px 15px;
-        background: #007acc;
-        color: #fff;
-        border-radius: 5px;
-        text-decoration: none;
-        margin-top: 10px;
-    }
-
-    a.button:hover {
-        background: #005fa3;
-    }
-
-    footer {
-        text-align: center;
-        padding: 20px;
-        background: #333;
-        color: #fff;
-    }
-
-    /* --- レスポンシブ対応 --- */
-    @media (max-width: 600px) {
-        header h1 { font-size: 20px; }
-        h2 { font-size: 16px; }
-        .table-wrapper th, .table-wrapper td { padding: 8px; font-size: 11px; }
-    }
+  footer{ text-align:center; padding:20px; background: rgba(51,51,51,0.85); color:#fff; }
+  @media(max-width:600px){ header h1{font-size:20px;} h2{font-size:16px;} .table-wrapper th,.table-wrapper td{padding:8px;font-size:11px;} }
 </style>
 </head>
-
 <body>
 
 <header>
-    <h1>山下勇磨 ポートフォリオ</h1>
-    <p>Web開発・業務・クラウド系SE志望</p>
+  <h1>山下勇磨 ポートフォリオ</h1>
+  <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
 <section id="skills" data-aos="fade-up">
-    <h2>スキル一覧</h2>
-    <div class="table-wrapper">
-        <table>
-            <tr>
-                <th>カテゴリ</th>
-                <th>スキル</th>
-                <th>レベル / 経験</th>
-            </tr>
-            <tr>
-                <td>プログラミング</td>
-                <td>Java, HTML, CSS, JavaScript</td>
-                <td>基礎〜実務レベル</td>
-            </tr>
-            <tr>
-                <td>フレームワーク</td>
-                <td>Spring Boot、GAS など</td>
-                <td>基礎理解学習</td>
-            </tr>
-            <tr>
-                <td>ツール</td>
-                <td>Eclipse, VSCode, GitHub, ChatGPT, Wix Editor</td>
-                <td>課題・個人開発経験</td>
-            </tr>
-            <tr>
-                <td>制御・回路</td>
-                <td>PLC, シーケンス制御, 回路設計</td>
-                <td>実務経験あり</td>
-            </tr>
-            <tr>
-                <td>Web・ショップページ改善</td>
-                <td>Wix, BASE, Amazon</td>
-                <td>個人プロジェクト</td>
-            </tr>
-        </table>
-    </div>
+  <h2>スキル一覧</h2>
+  <div class="table-wrapper">
+    <table>
+      <tr><th>カテゴリ</th><th>スキル</th><th>レベル / 経験</th></tr>
+      <tr><td>プログラミング</td><td>Java, HTML, CSS, JavaScript</td><td>基礎〜実務レベル</td></tr>
+      <tr><td>フレームワーク</td><td>Spring Boot、GAS など</td><td>基礎理解学習</td></tr>
+      <tr><td>ツール</td><td>Eclipse, VSCode, GitHub, ChatGPT, Wix Editor</td><td>課題・個人開発経験</td></tr>
+    </table>
+  </div>
 </section>
 
 <section id="projects">
-    <h2>個人プロジェクト事例</h2>
+  <h2>個人プロジェクト事例</h2>
 
-    <!-- 左からスライド＋順番にディレイ -->
-    <div class="project-card" data-aos="fade-right" data-aos-delay="0">
-        <h3>A. Web開発</h3>
-        <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
-        <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
-        <p><strong>成果：</strong>WIX埋め込み用ページデザイン改善</p>
-        <a class="button" href="https://gist.github.com/appvoss/e992a73256dfebe4b8e95d172f598121" target="_blank">GitHubを見る</a>
-        <a class="button" href="https://www.aplamodel-fishing.com/" target="_blank">Webサイトを見る</a>
-    </div>
+  <div class="project-card" data-aos="fade-right" data-aos-delay="0">
+    <h3>A. Web開発</h3>
+    <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
+    <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
+    <p><strong>成果：</strong>WIX埋め込み用ページデザイン改善</p>
+    <a class="button" href="#" target="_blank">GitHubを見る</a>
+  </div>
 
-    <div class="project-card" data-aos="fade-right" data-aos-delay="200">
-        <h3>B. 制御・組み込み系</h3>
-        <p><strong>概要：</strong>PLCシーケンス制御設計、動力盤・計装盤設計</p>
-        <p><strong>使用技術：</strong>シーケンス図面作成、回路設計、PLC接続設計</p>
-        <p><strong>成果：</strong>新規設備ライン立ち上げ、信号取込設計、改善提案</p>
-    </div>
+  <div class="project-card" data-aos="fade-right" data-aos-delay="200">
+    <h3>B. 制御・組み込み系</h3>
+    <p><strong>概要：</strong>PLCシーケンス制御設計、動力盤・計装盤設計</p>
+  </div>
 </section>
 
-<section id="education" data-aos="fade-up">
-    <h2>学習・資格</h2>
-    <ul>
-        <li>学習：Java, HTML/CSS, JavaScript, SQL, MVC</li>
-        <li>資格（取得予定）：基本情報技術者試験（FE）</li>
-    </ul>
+<section id="education" data-aos="fade-up"><h2>学習・資格</h2><ul><li>Java, HTML/CSS, JavaScript, SQL, MVC</li></ul></section>
+<section id="contact" data-aos="fade-up"><h2>連絡先</h2><p>Email: aplamodel@outlook.com</p></section>
+<footer><p>© 2025 山下勇磨</p></footer>
 
-    <h3>現在挑戦中・成長中のスキル</h3>
-    <ul>
-        <li>実務レベルのプログラミング経験をさらに積み、効率的な開発手法を習得中</li>
-        <li>業務改善・プロジェクト推進の経験を増やし、チームでの成果創出に挑戦中</li>
-    </ul>
-</section>
-
-<section id="contact" data-aos="fade-up">
-    <h2>連絡先</h2>
-    <p>Email: aplamodel@outlook.com</p>
-</section>
-
-<footer>
-    <p>© 2025 山下勇磨</p>
-</footer>
-
-<!-- ✅ AOSスクリプト -->
+<!-- AOS JS（body末尾で読み込み） -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
-AOS.init({
-  duration: 1000, // アニメーション時間（ms）
-  once: true,     // 一度だけ実行
-  easing: 'ease-out-cubic'
-});
+  // DOM と画像等の読み込み完了を待ってから初期化 → 確実に動く
+  window.addEventListener('load', function() {
+    if(window.AOS){
+      AOS.init({
+        duration: 1000,
+        once: true,
+        easing: 'ease-out-cubic'
+      });
+      // さらにリフレッシュを呼ぶことで、動的要素や画像読み込み後でも正しく判定
+      AOS.refresh();
+    } else {
+      console.warn('AOS is not loaded.');
+    }
+  });
 </script>
-
 </body>
 </html>
