--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
-<section id="skills" data-aos="fade-up" data-aos-delay="200">
+<section id="skills" data-aos="fade-up" data-aos-delay="400">
     <h2>スキル一覧</h2>
     <div class="table-wrapper">
         <table>
@@ -179,7 +179,7 @@
 <section id="projects">
     <h2 data-aos="fade-up" data-aos-delay="400">個人プロジェクト事例</h2>
 
-    <div class="project-card" data-aos="fade-right" data-aos-delay="400">
+    <div class="project-card" data-aos="fade-right" data-aos-delay="800">
         <h3>A. Web開発</h3>
         <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
         <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
@@ -188,7 +188,7 @@
         <a class="button" href="https://www.aplamodel-fishing.com/" target="_blank">Webサイトを見る</a>
     </div>
 
-    <div class="project-card" data-aos="fade-right" data-aos-delay="600">
+    <div class="project-card" data-aos="fade-right" data-aos-delay="1000">
         <h3>B. 制御・組み込み系</h3>
         <p><strong>概要：</strong>PLCシーケンス制御設計、動力盤・計装盤設計</p>
         <p><strong>使用技術：</strong>シーケンス図面作成、回路設計、PLC接続設計</p>
@@ -196,7 +196,7 @@
     </div>
 </section>
 
-<section id="education" data-aos="fade-up" data-aos-delay="800">
+<section id="education" data-aos="fade-up" data-aos-delay="1200">
     <h2>学習・資格</h2>
     <ul>
         <li>学習：Java, HTML/CSS, JavaScript, SQL, MVC</li>
@@ -215,7 +215,7 @@
     <p>Email: aplamodel@outlook.com</p>
 </section>
 
-<footer data-aos="fade-up" data-aos-delay="1200">
+<footer data-aos="fade-up" data-aos-delay="1600">
     <p>© 2025 山下勇磨</p>
 </footer>
 
@@ -224,9 +224,9 @@
 <script>
 window.addEventListener('load', function() {
   AOS.init({
-    duration: 1000,
+    duration: 1800,
     once: true,
-    easing: 'ease-out-cubic'
+    easing: 'ease-out-sine'
   });
   AOS.refresh();
 });
