--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 
 <body>
 
-<header data-aos="fade-down" data-aos-delay="0">
+<header data-aos="fade-right" data-aos-delay="0">
     <h1>山下勇磨 ポートフォリオ</h1>
     <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
-<section id="skills" data-aos="fade-up" data-aos-delay="1000">
+<section id="skills" data-aos="fade-right" data-aos-delay="1000">
     <h2>スキル一覧</h2>
     <div class="table-wrapper">
         <table>
@@ -177,7 +177,7 @@
 </section>
 
 <section id="projects">
-    <h2 data-aos="fade-up" data-aos-delay="400">個人プロジェクト事例</h2>
+    <h2 data-aos="fade-right" data-aos-delay="400">個人プロジェクト事例</h2>
 
     <div class="project-card" data-aos="fade-right" data-aos-delay="1400">
         <h3>A. Web開発</h3>
@@ -196,7 +196,7 @@
     </div>
 </section>
 
-<section id="education" data-aos="fade-up" data-aos-delay="2800">
+<section id="education" data-aos="fade-right" data-aos-delay="2800">
     <h2>学習・資格</h2>
     <ul>
         <li>学習：Java, HTML/CSS, JavaScript, SQL, MVC</li>
@@ -210,12 +210,12 @@
     </ul>
 </section>
 
-<section id="contact" data-aos="fade-up" data-aos-delay="3600">
+<section id="contact" data-aos="fade-right" data-aos-delay="3600">
     <h2>連絡先</h2>
     <p>Email: aplamodel@outlook.com</p>
 </section>
 
-<footer data-aos="fade-up" data-aos-delay="4400">
+<footer data-aos="fade-right" data-aos-delay="4400">
     <p>© 2025 山下勇磨</p>
 </footer>
 
