--- a/index.html
+++ b/index.html
@@ -24,16 +24,6 @@
         text-align: center;
     }
 
-    header h1 {
-        margin: 0;
-        font-size: 28px;
-    }
-
-    header p {
-        margin: 5px 0 0;
-        font-size: 16px;
-    }
-
     section {
         padding: 20px;
         max-width: 1000px;
@@ -51,36 +41,6 @@
         margin-bottom: 15px;
     }
 
-    /* --- スキルテーブル --- */
-    .table-wrapper {
-        overflow-x: auto;
-        margin: 0 auto;
-        border: 2px solid #007acc;
-        border-radius: 8px;
-        padding: 10px;
-        background-color: #fff;
-    }
-
-    .table-wrapper table {
-        width: 100%;
-        border-collapse: collapse;
-    }
-
-    .table-wrapper th, .table-wrapper td {
-        border: 1px solid #ccc;
-        padding: 10px;
-        text-align: left;
-    }
-
-    .table-wrapper th {
-        background-color: #007acc;
-        color: #fff;
-    }
-
-    .table-wrapper tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-
     /* --- プロジェクトカード --- */
     .project-card {
         border: 1px solid #ddd;
@@ -95,11 +55,6 @@
     .project-card:hover {
         transform: translateY(-5px);
         box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
-
-    .project-card h3 {
-        color: #007acc;
-        margin-top: 0;
     }
 
     a.button {
@@ -123,99 +78,60 @@
         color: #fff;
     }
 
-    @media (max-width: 600px) {
-        header h1 { font-size: 20px; }
-        h2 { font-size: 16px; }
-        .table-wrapper th, .table-wrapper td { padding: 8px; font-size: 11px; }
+    /* --- 💫 右からスライドインを強調 --- */
+    [data-aos="fade-left"] {
+        transform: translateX(80px);
+        opacity: 0;
+        transition-property: transform, opacity;
+    }
+
+    [data-aos="fade-left"].aos-animate {
+        transform: translateX(0);
+        opacity: 1;
     }
 </style>
 </head>
 
 <body>
 
-<header data-aos="fade-right" data-aos-delay="0">
+<header data-aos="fade-left" data-aos-delay="0">
     <h1>山下勇磨 ポートフォリオ</h1>
     <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
-<section id="skills" data-aos="fade-right" data-aos-delay="1000">
+<section id="skills" data-aos="fade-left" data-aos-delay="800">
     <h2>スキル一覧</h2>
-    <div class="table-wrapper">
-        <table>
-            <tr>
-                <th>カテゴリ</th>
-                <th>スキル</th>
-                <th>レベル / 経験</th>
-            </tr>
-            <tr>
-                <td>プログラミング</td>
-                <td>Java, HTML, CSS, JavaScript</td>
-                <td>基礎〜実務レベル</td>
-            </tr>
-            <tr>
-                <td>フレームワーク</td>
-                <td>Spring Boot、GAS など</td>
-                <td>基礎理解学習</td>
-            </tr>
-            <tr>
-                <td>ツール</td>
-                <td>Eclipse, VSCode, GitHub, ChatGPT, Wix Editor</td>
-                <td>課題・個人開発経験</td>
-            </tr>
-            <tr>
-                <td>制御・回路</td>
-                <td>PLC, シーケンス制御, 回路設計</td>
-                <td>実務経験あり</td>
-            </tr>
-            <tr>
-                <td>Web・ショップページ改善</td>
-                <td>Wix, BASE, Amazon</td>
-                <td>個人プロジェクト</td>
-            </tr>
-        </table>
-    </div>
+    <p>主要スキルの一覧です。</p>
 </section>
 
 <section id="projects">
-    <h2 data-aos="fade-right" data-aos-delay="400">個人プロジェクト事例</h2>
+    <h2 data-aos="fade-left" data-aos-delay="1600">個人プロジェクト事例</h2>
 
-    <div class="project-card" data-aos="fade-right" data-aos-delay="1400">
+    <div class="project-card" data-aos="fade-left" data-aos-delay="2400">
         <h3>A. Web開発</h3>
         <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
-        <p><strong>使用技術：</strong>HTML, CSS, JavaScript, VSCode, GitHub</p>
-        <p><strong>成果：</strong>WIX埋め込み用ページデザイン改善</p>
         <a class="button" href="https://gist.github.com/appvoss/e992a73256dfebe4b8e95d172f598121" target="_blank">GitHubを見る</a>
-        <a class="button" href="https://www.aplamodel-fishing.com/" target="_blank">Webサイトを見る</a>
     </div>
 
-    <div class="project-card" data-aos="fade-right" data-aos-delay="2000">
+    <div class="project-card" data-aos="fade-left" data-aos-delay="3200">
         <h3>B. 制御・組み込み系</h3>
-        <p><strong>概要：</strong>PLCシーケンス制御設計、動力盤・計装盤設計</p>
-        <p><strong>使用技術：</strong>シーケンス図面作成、回路設計、PLC接続設計</p>
-        <p><strong>成果：</strong>新規設備ライン立ち上げ、信号取込設計、改善提案</p>
+        <p><strong>概要：</strong>PLCシーケンス制御設計、回路設計など</p>
     </div>
 </section>
 
-<section id="education" data-aos="fade-right" data-aos-delay="2800">
+<section id="education" data-aos="fade-left" data-aos-delay="4000">
     <h2>学習・資格</h2>
     <ul>
-        <li>学習：Java, HTML/CSS, JavaScript, SQL, MVC</li>
-        <li>資格（取得予定）：基本情報技術者試験（FE）</li>
-    </ul>
-
-    <h3>現在挑戦中・成長中のスキル</h3>
-    <ul>
-        <li>実務レベルのプログラミング経験をさらに積み、効率的な開発手法を習得中</li>
-        <li>業務改善・プロジェクト推進の経験を増やし、チームでの成果創出に挑戦中</li>
+        <li>Java, HTML/CSS, JS, SQLなどを継続学習中</li>
     </ul>
 </section>
 
-<section id="contact" data-aos="fade-right" data-aos-delay="3600">
+<section id="contact" data-aos="fade-left" data-aos-delay="4800">
     <h2>連絡先</h2>
     <p>Email: aplamodel@outlook.com</p>
 </section>
 
-<footer data-aos="fade-right" data-aos-delay="4400">
+<footer data-aos="fade-left" data-aos-delay="5600">
     <p>© 2025 山下勇磨</p>
 </footer>
 
@@ -224,9 +140,10 @@
 <script>
 window.addEventListener('load', function() {
   AOS.init({
-    duration: 6000,
-    once: true,
-    easing: 'ease-out-sine'
+    duration: 6000,              // ゆっくり6秒
+    once: true,                  // 一度のみアニメーション
+    easing: 'ease-in-out-cubic', // 滑らかな動き
+    offset: 100                  // 少しスクロールしてから動く
   });
   AOS.refresh();
 });
