--- a/index.html
+++ b/index.html
@@ -9,130 +9,158 @@
 <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        background-color: transparent;
-    }
+body {
+  font-family: "Noto Sans JP", sans-serif;
+  line-height: 1.8;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(180deg, #eef3f8 0%, #ffffff 100%);
+  color: #222;
+}
 
-    header {
-        background: linear-gradient(90deg, #007acc, #005fa3);
-        color: #fff;
-        padding: 30px 0;
-        text-align: center;
-    }
+/* --- ヘッダー --- */
+header {
+  background: linear-gradient(90deg, #007acc, #005fa3);
+  color: #fff;
+  padding: 40px 0;
+  text-align: center;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+}
 
-    section {
-        padding: 20px;
-        max-width: 1000px;
-        margin: 20px auto;
-        background: rgba(255, 255, 255, 0.9);
-        border-radius: 8px;
-        box-sizing: border-box;
-        backdrop-filter: blur(5px);
-    }
+header h1 {
+  margin: 0;
+  font-size: 32px;
+  letter-spacing: 1px;
+}
 
-    h2 {
-        color: #007acc;
-        border-left: 6px solid #007acc;
-        padding-left: 10px;
-        margin-bottom: 15px;
-    }
+header p {
+  margin-top: 8px;
+  font-size: 16px;
+  opacity: 0.9;
+}
 
-    /* --- プロジェクトカード --- */
-    .project-card {
-        border: 1px solid #ddd;
-        border-radius: 10px;
-        padding: 20px;
-        margin-bottom: 20px;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        background: #fff;
-        transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
+/* --- セクション --- */
+section {
+  max-width: 1000px;
+  margin: 60px auto;
+  background: rgba(255, 255, 255, 0.95);
+  border-radius: 16px;
+  padding: 40px 60px;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+  backdrop-filter: blur(8px);
+  transform: translateY(20px);
+  transition: transform 0.8s ease-out, opacity 1s ease-out;
+}
 
-    .project-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    }
+h2 {
+  color: #005fa3;
+  border-left: 6px solid #007acc;
+  padding-left: 12px;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
 
-    a.button {
-        display: inline-block;
-        padding: 10px 15px;
-        background: #007acc;
-        color: #fff;
-        border-radius: 5px;
-        text-decoration: none;
-        margin-top: 10px;
-    }
+/* --- プロジェクトカード --- */
+.project-card {
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  padding: 25px;
+  margin-bottom: 30px;
+  background: #fff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
 
-    a.button:hover {
-        background: #005fa3;
-    }
+.project-card:hover {
+  transform: translateY(-8px);
+  box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+}
 
-    footer {
-        text-align: center;
-        padding: 20px;
-        background: #333;
-        color: #fff;
-    }
+.project-card h3 {
+  color: #007acc;
+  margin-top: 0;
+  font-weight: 600;
+}
 
-    /* 💫 ゆっくり右からスライドイン */
-    [data-aos="fade-left"] {
-        transform: translateX(120px); /* 少し長めに滑る */
-        opacity: 0;
-        transition-property: transform, opacity;
-    }
+/* --- ボタン --- */
+a.button {
+  display: inline-block;
+  padding: 10px 18px;
+  background: #007acc;
+  color: #fff;
+  border-radius: 8px;
+  text-decoration: none;
+  margin-top: 10px;
+  transition: background 0.3s ease;
+}
 
-    [data-aos="fade-left"].aos-animate {
-        transform: translateX(0);
-        opacity: 1;
-    }
+a.button:hover {
+  background: #005fa3;
+}
+
+/* --- フッター --- */
+footer {
+  text-align: center;
+  padding: 30px;
+  background: #222;
+  color: #fff;
+  font-size: 14px;
+  opacity: 0.9;
+}
+
+/* --- レスポンシブ --- */
+@media (max-width: 768px) {
+  section { padding: 30px 20px; }
+  header h1 { font-size: 24px; }
+  h2 { font-size: 18px; }
+}
 </style>
 </head>
 
 <body>
 
-<header data-aos="fade-left" data-aos-delay="0">
-    <h1>山下勇磨 ポートフォリオ</h1>
-    <p>Web開発・業務・クラウド系SE志望</p>
+<header data-aos="fade-down" data-aos-delay="0">
+  <h1>山下勇磨 ポートフォリオ</h1>
+  <p>Web開発・業務・クラウド系SE志望</p>
 </header>
 
-<section id="skills" data-aos="fade-left" data-aos-delay="1000">
-    <h2>スキル一覧</h2>
-    <p>主要スキルの一覧です。</p>
+<section id="skills" data-aos="fade-up" data-aos-delay="800">
+  <h2>スキル一覧</h2>
+  <p>Java / HTML / CSS / JavaScript / Spring Boot / GitHub / ChatGPT</p>
 </section>
 
 <section id="projects">
-    <h2 data-aos="fade-left" data-aos-delay="2000">個人プロジェクト事例</h2>
+  <h2 data-aos="fade-right" data-aos-delay="1600">個人プロジェクト事例</h2>
 
-    <div class="project-card" data-aos="fade-left" data-aos-delay="3000">
-        <h3>A. Web開発</h3>
-        <p><strong>概要：</strong>Wixサイト構築、HTML/CSS/JavaScriptでの静的ページ作成</p>
-        <a class="button" href="https://gist.github.com/appvoss/e992a73256dfebe4b8e95d172f598121" target="_blank">GitHubを見る</a>
-    </div>
+  <div class="project-card" data-aos="fade-right" data-aos-delay="2000">
+    <h3>A. Web開発</h3>
+    <p><strong>概要：</strong>Wixサイト構築・HTML/CSS/JavaScript実装</p>
+    <p><strong>成果：</strong>WIX埋め込み用ページデザイン改善</p>
+    <a class="button" href="https://gist.github.com/appvoss/e992a73256dfebe4b8e95d172f598121" target="_blank">GitHubを見る</a>
+  </div>
 
-    <div class="project-card" data-aos="fade-left" data-aos-delay="4000">
-        <h3>B. 制御・組み込み系</h3>
-        <p><strong>概要：</strong>PLCシーケンス制御設計、回路設計など</p>
-    </div>
+  <div class="project-card" data-aos="fade-left" data-aos-delay="2800">
+    <h3>B. 制御・組み込み系</h3>
+    <p><strong>概要：</strong>PLC制御設計・回路設計・信号取込システム</p>
+    <p><strong>成果：</strong>新規ライン立ち上げ、制御改善提案</p>
+  </div>
 </section>
 
-<section id="education" data-aos="fade-left" data-aos-delay="5000">
-    <h2>学習・資格</h2>
-    <ul>
-        <li>Java, HTML/CSS, JS, SQLなどを継続学習中</li>
-    </ul>
+<section id="education" data-aos="fade-up" data-aos-delay="3600">
+  <h2>学習・資格</h2>
+  <ul>
+    <li>学習中：Java, SQL, Spring Boot</li>
+    <li>資格予定：基本情報技術者試験（FE）</li>
+  </ul>
 </section>
 
-<section id="contact" data-aos="fade-left" data-aos-delay="6000">
-    <h2>連絡先</h2>
-    <p>Email: aplamodel@outlook.com</p>
+<section id="contact" data-aos="zoom-in" data-aos-delay="4400">
+  <h2>連絡先</h2>
+  <p>Email: aplamodel@outlook.com</p>
 </section>
 
-<footer data-aos="fade-left" data-aos-delay="7000">
-    <p>© 2025 山下勇磨</p>
+<footer data-aos="fade-up" data-aos-delay="5200">
+  <p>© 2025 山下勇磨</p>
 </footer>
 
 <!-- ✅ AOSスクリプト -->
@@ -140,12 +168,11 @@
 <script>
 window.addEventListener('load', function() {
   AOS.init({
-    duration: 18000,              // 💡 アニメーション時間：18秒（超ゆっくり）
-    once: true,                   // 一度だけ再生
-    easing: 'ease-in-out-sine',   // 滑らかで優しい動き
-    offset: 120                   // 少しスクロールしてから動作
+    duration: 2500,              // アニメーション時間（2.5秒）
+    once: true,                  // 一度だけ再生
+    easing: 'ease-in-out-cubic', // 高級感のある滑らかさ
+    offset: 120                  // 画面下から少し見えてから発動
   });
-  AOS.refresh();
 });
 </script>
 
