--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
-  background: transparent; /* 背景を透過 */
+  background: transparent; /* 背景透過 */
+}
+
+/* --- コンテナ全体 --- */
+.container {
+  width: 980px;
+  min-height: 2100px; /* PC表示の目安高さ */
+  margin: 0 auto; /* 中央寄せ */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 /* --- ヘッダー --- */
 header {
-  background: rgba(143,188,212,0.6); /* 半透明に変更 */
+  width: 100%;
+  background: rgba(143,188,212,0.6); /* 半透明 */
   color: #fff;
   padding: 40px 0;
   text-align: center;
@@ -43,9 +55,9 @@ header p {
 
 /* --- セクション --- */
 section {
+  width: 90%;
   padding: 40px 25px;
-  max-width: 900px;
-  margin: 40px auto;
+  margin: 40px 0;
   background: rgba(255, 255, 255, 0.6); /* 半透明白 */
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.05);
@@ -119,25 +131,34 @@ a.button:hover {
 
 /* --- フッター --- */
 footer {
+  width: 100%;
   text-align: center;
   padding: 25px;
-  background: rgba(68,105,125,0.6); /* 半透明 */
+  background: rgba(68,105,125,0.6);
   color: #fff;
   font-size: 14px;
   letter-spacing: 0.5px;
   border-radius: 12px;
+  margin-top: auto;
 }
 
 /* --- スマホ対応 --- */
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
+  .container {
+    width: 100%;
+    min-height: auto;
+    padding: 0 10px;
+  }
   header h1 { font-size: 22px; }
   h2 { font-size: 18px; }
-  section { padding: 25px 15px; }
+  section { padding: 25px 15px; width: 100%; }
 }
 </style>
 </head>
 
 <body>
+
+<div class="container">
 
 <header data-aos="fade-up" data-aos-delay="0">
   <h1>山下勇磨 ポートフォリオ</h1>
@@ -196,6 +217,8 @@ footer {
 <footer data-aos="fade-up" data-aos-delay="2500">
   <p>© 2025 山下勇磨</p>
 </footer>
+
+</div>
 
 <!-- ✅ AOSスクリプト -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
