Adjust container width to 950px

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ body {
 
 /* --- コンテナ全体 --- */
 .container {
-  width: 980px;
-  min-height: 2100px; /* PC表示の目安高さ */
+  width: 950px; /* 横幅を950pxに固定 */
+  min-height: 2100px; /* 高さの目安を2100pxに設定 */
   margin: 0 auto; /* 中央寄せ */
   display: flex;
   flex-direction: column;
