--- a/index.html
+++ b/index.html
@@ -13,19 +13,15 @@
 body {
   font-family: "Hiragino Sans", "Yu Gothic", sans-serif;
   line-height: 1.8;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   color: #333;
-  background: transparent; /* ✅ 背景透過 */
-  width: 950px; /* ✅ PC幅 */
-  max-width: 100%;
-  min-height: 2100px; /* ✅ 高さ目安 */
-  box-sizing: border-box;
+  background: transparent; /* 背景を透過 */
 }
 
 /* --- ヘッダー --- */
 header {
-  background: linear-gradient(90deg, #8fbcd4, #6ba5c2);
+  background: rgba(143,188,212,0.6); /* 半透明に変更 */
   color: #fff;
   padding: 40px 0;
   text-align: center;
@@ -50,7 +46,7 @@ section {
   padding: 40px 25px;
   max-width: 900px;
   margin: 40px auto;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(255, 255, 255, 0.6); /* 半透明白 */
   border-radius: 12px;
   box-shadow: 0 4px 15px rgba(0,0,0,0.05);
   backdrop-filter: blur(8px);
@@ -71,7 +67,7 @@ h2 {
   border: 1px solid #bcd5e3;
   border-radius: 8px;
   padding: 10px;
-  background-color: #fff;
+  background-color: rgba(255,255,255,0.8);
 }
 
 .table-wrapper table {
@@ -86,13 +82,13 @@ h2 {
 }
 
 .table-wrapper th {
-  background-color: #a4c8dc;
+  background-color: rgba(164,200,220,0.8);
   color: #fff;
   font-weight: 600;
 }
 
 .table-wrapper tr:nth-child(even) {
-  background-color: #f5f9fc;
+  background-color: rgba(245,249,252,0.8);
 }
 
 /* --- プロジェクトカード --- */
@@ -101,18 +97,15 @@ h2 {
   border-radius: 10px;
   padding: 25px;
   margin-bottom: 25px;
-  background: #fff;
+  background: rgba(255,255,255,0.7);
   box-shadow: 0 3px 10px rgba(0,0,0,0.05);
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* --- ボタン --- */
 a.button {
   display: inline-block;
   padding: 10px 18px;
-  background: #6ba5c2;
+  background: rgba(107,165,194,0.9);
   color: #fff;
   border-radius: 6px;
   text-decoration: none;
@@ -121,124 +114,30 @@ a.button {
 }
 
 a.button:hover {
-  background: #588ca9;
+  background: rgba(88,140,169,0.9);
 }
 
 /* --- フッター --- */
 footer {
   text-align: center;
   padding: 25px;
-  background: #44697d;
+  background: rgba(68,105,125,0.6); /* 半透明 */
   color: #fff;
   font-size: 14px;
   letter-spacing: 0.5px;
   border-radius: 12px;
 }
 
-/* --- 🟡 タブレット対応（600〜950px） --- */
-@media (max-width: 950px) and (min-width: 601px) {
-  body {
-    width: 90%;
-    min-height: 2300px; /* ✅ 高さ中間 */
-  }
-
-  header {
-    padding: 30px 0;
-  }
-
-  header h1 {
-    font-size: 26px;
-  }
-
-  header p {
-    font-size: 14px;
-  }
-
-  section {
-    padding: 30px 20px;
-    margin: 30px auto;
-    width: 90%;
-  }
-
-  .project-card {
-    width: 90%;
-    padding: 20px;
-  }
-
-  a.button {
-    font-size: 14px;
-    padding: 9px 14px;
-  }
-
-  footer {
-    width: 90%;
-    margin: 0 auto;
-    padding: 20px 10px;
-  }
-}
-
-/* --- 📱 スマホ対応（〜600px） --- */
+/* --- スマホ対応 --- */
 @media (max-width: 600px) {
-  body {
-    width: 300px; /* ✅ スマホ幅 */
-    min-height: 2700px; /* ✅ 高さ目安 */
-  }
-
-  header {
-    padding: 25px 0;
-    border-radius: 10px;
-  }
-
-  header h1 {
-    font-size: 20px;
-  }
-
-  header p {
-    font-size: 13px;
-  }
-
-  h2 {
-    font-size: 16px;
-    padding-left: 10px;
-    border-left-width: 4px;
-  }
-
-  section {
-    padding: 20px 10px;
-    margin: 25px auto;
-    width: 280px; /* ✅ セクション幅を280pxに調整 */
-  }
-
-  .project-card {
-    width: 280px; /* ✅ スマホ時カード幅固定 */
-    padding: 18px;
-    margin: 18px auto;
-  }
-
-  .table-wrapper th, .table-wrapper td {
-    font-size: 13px;
-    padding: 8px;
-  }
-
-  a.button {
-    font-size: 13px;
-    padding: 8px 12px;
-  }
-
-  footer {
-    width: 280px;
-    margin: 0 auto;
-    padding: 20px 10px;
-    font-size: 12px;
-  }
+  header h1 { font-size: 22px; }
+  h2 { font-size: 18px; }
+  section { padding: 25px 15px; }
 }
-
 </style>
 </head>
 
 <body>
-
-<div class="container">
 
 <header data-aos="fade-up" data-aos-delay="0">
   <h1>山下勇磨 ポートフォリオ</h1>
@@ -297,8 +196,6 @@ footer {
 <footer data-aos="fade-up" data-aos-delay="2500">
   <p>© 2025 山下勇磨</p>
 </footer>
-
-</div>
 
 <!-- ✅ AOSスクリプト -->
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
