Update experience description in index.html
フルリモートスキルの追加

--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@ footer {
       </tr>
       <tr><td>プログラミング</td><td>Java, HTML, CSS, JavaScript</td><td>基礎〜実務レベル</td></tr>
       <tr><td>フレームワーク</td><td>Spring Boot、GAS など</td><td>基礎理解学習</td></tr>
-      <tr><td>ツール</td><td>Eclipse, VSCode, GitHub, ChatGPT, Wix Editor</td><td>課題・個人開発経験</td></tr>
+      <tr><td>ツール</td><td>Eclipse, VSCode, GitHub, ChatGPT, Wix Editor</td><td>課題・実績や開発経験の蓄積</td></tr>
+      <tr><td>フルリモートワーク経験有り</td></td></tr>
     </table>
   </div>
 </section>
